--- a/doc/硬件信息的获取方式.md
+++ b/doc/硬件信息的获取方式.md
@@ -22,7 +22,7 @@
 
 - 进程数采集来源
 
-	利用命令'lsof | wc -l'，在 Linux 下，任何事物都以文件的形式存在，因而进程数可以通过统计打开文件数目来获取。
+	利用命令'cat /proc/sys/fs/file-nr'，在 Linux 下，任何事物都以文件的形式存在，因而进程数可以通过统计打开文件数目来获取，其中第一个数表示当前系统已分配使用的打开文件描述符。
 
 - 数据库表结构
 
